--- a/shippable.yml
+++ b/shippable.yml
@@ -7,20 +7,21 @@ jdk:
    - oraclejdk8
 
 build:
-  pre_ci:
-    - docker build -t=gcr.io/gcr_project_id/hitchcock3_sample_java .
+ # pre_ci:
+  #  - docker build -t=gcr.io/gcr_project_id/hitchcock3_sample_java .
 
-  pre_ci_boot:
-    image_name: gcr.io/gcr_project_id/hitchcock3_sample_java
-    image_tag: latest
-    pull: false
-    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
+ # pre_ci_boot:
+  #  image_name: gcr.io/gcr_project_id/hitchcock3_sample_java
+   # image_tag: latest
+    #pull: false
+    #options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
   ci:
     - ps -eax
     - ls -al
 
   post_ci:
+    - docker build -t=gcr.io/gcr_project_id/hitchcock3_sample_java .
     - docker push gcr.io/gcr_project_id/hitchcock3_sample_java
 
 integrations:
