--- a/shippable.yml
+++ b/shippable.yml
@@ -11,7 +11,7 @@ build:
   #  - docker build -t=gcr.io/gcr_project_id/hitchcock3_sample_java .
 
   pre_ci_boot:
-    image_name: drydock/u14javall
+    image_name: gcr.io/gcr_project_id/hitchcock3_sample_java
     image_tag: latest
     pull: true
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
