--- a/shippable.yml
+++ b/shippable.yml
@@ -26,7 +26,7 @@ build:
 
 integrations:
   hub:
-    - integrationName: ship-gcr
+    - integrationName: gcrintegration
       type: gcr
       #branches:
        # only:
